# decentralized-ffi

bdk-ffi/: Cargo.toml
bdk-ffi/src/: bdk.udl  bitcoin.rs  electrum.rs  esplora.rs  lib.rs  rune.rs  testnet4.rs  tx_builder.rs  types.rs  utils.rs  wallet.rs
bdk-ffi/src/rune/: mod.rs  rune.rs  rune_id.rs  varint.rs
bdk-swift/: build-xcframework.sh
decentralized-ffi/: Cargo.toml  uniffi.toml
decentralized-ffi/examples/: main.rs
decentralized-ffi/src/: bitcoin.rs  descriptor.rs  electrum.rs  error.rs  esplora.rs  keys.rs  kyoto.rs  lib.rs  store.rs  testnet4.rs  tmp  tx_builder.rs  types.rs  utils.rs  wallet.rs
decentralized-ffi/src/ordinal/: dummy_transaction.rs  mod.rs  snipe.rs
decentralized-ffi/src/ordinal/inscription/: batch.rs  common.rs  decimal.rs  decimal_sat.rs  degree.rs  deserialize_from_str.rs  envelope.rs  epoch.rs  height.rs  inscription.rs  inscription_id.rs  media.rs  mod.rs  rarity.rs  sat.rs  sat_point.rs
decentralized-ffi/src/ordinal/rune/: mod.rs  rune.rs  rune_id.rs
decentralized-swift/: Package.swift  Package.swift.txt  build-xcframework.sh
